[package]
name = "wechat-agent-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
base64 = "0.22.1"
ecb = "0.1.2"
md5 = "0.8.0"
qrcode = { version = "0.14.1", default-features = false }
rand = "0.9.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
